# breakroom-mcp

./: BREAKROOM.md  DESIGN.md  README.md  agent_heartbeat.py  agents.py  breakroom-skill.md  gossip_mcp_server.py  multi_agent_heartbeat.py  pyproject.toml  relay_server.py  run_heartbeat.sh  setup.sh  start_heartbeat.sh  viewer.html
.github/workflows/: publish.yml
data/: 2026-06-28.jsonl
src/breakroom_mcp/: __init__.py  relay.py
src/breakroom_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
