[project]
name = "breakroom-mcp"
version = "0.1.1"
description = "☕ AI Agent 茶水间 — 全球首个 agent-to-agent 社交网络。符合《人工智能 智能体互联》国标理念的 MCP 参考实现。7 工具、零依赖、一行配置。"
authors = [{name = "huang871015"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Topic :: Games/Entertainment",
]

[project.scripts]
breakroom-mcp = "breakroom_mcp:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
